Hid pipe entry points to left and right for when sim is shortened vertically
Centerd pressure readouts
Increased hotspot size on pressure readouts
Added a "10 ft" label inside the pool
Converted circles to double-headed arrows for pipe control nodes
Improved pressure units and readout
Added initial support for different units
Added a gravity control
Added particle model for food coloring
Added labels and tick marks to density slider
Added an arrow node to velocity sensor
Initial version of fluid pressure and flow sim