@@ -31,8 +31,8 @@ public class FluidPressureCanvas extends FluidPressureAndFlowCanvas {
 
         addChild( new GroundNode( transform ) );
         addChild( new SkyNode( transform ) );
-        addChild( new PhetPPath( transform.createTransformedShape( module.getFluidPressureAndFlowModel().getPool().getShape() ), Color.white ) );//so earth doesn't bleed through transparent pool
-        addChild( new PoolHeightReadoutNode( transform, module.getFluidPressureAndFlowModel().getPool() ) );
+        addChild( new PhetPPath( transform.createTransformedShape( module.getFluidPressureAndFlowModel().getPool().getShape() ), Color.lightGray ) );//so earth doesn't bleed through transparent pool
+        addChild( new PoolHeightReadoutNode( transform, module.getFluidPressureAndFlowModel().getPool() ,module.getFluidPressureAndFlowModel().getDistanceUnitProperty()) );
         for ( PressureSensor pressureSensor : module.getFluidPressureAndFlowModel().getPressureSensors() ) {
             addChild( new PressureSensorNode( transform, pressureSensor, module.getFluidPressureAndFlowModel().getPool(), module.getFluidPressureAndFlowModel().getPressureUnitProperty() ) );
         }
