@@ -1,3 +1,4 @@
+Added units for meters/feet
 Hid pipe entry points to left and right for when sim is shortened vertically
 Centerd pressure readouts
 Increased hotspot size on pressure readouts
